...
  render() {
    const { myComments, otherComments } = this.props

    return (
      <View style={styles.container}>
        <Text style={styles.header}>
          Selleo team appreciate…
        </Text>
        <Text style={styles.section}>
          me for:
        </Text>
        <FlatList
          data={myComments}
          renderItem={this.renderComment}
          keyExtractor={this.keyExtractor}
        />
...
